# Grid-Scale-Battery-Dispatch-DRL

./: .dvcignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
notebooks/: 01_eda_price_volatility.ipynb  01_eda_script.py  02_eda_duck_curve_and_fcas.ipynb  02_eda_script.py  convert_to_notebook.py
src/agents/: heuristic_agent.py  rl_agent.py  train_rl.py  tune_rl.py
src/app/: streamlit_app.py
src/config/: hyperparameters.yaml  reward_weights.yaml  state_space_config.yaml
src/data/: clean_data.py  download_aemo.py  feature_engineering.py  parse_aemo.py  split_and_save.py
src/environment/: battery_env.py  battery_model.py  data_feeder.py  market_simulator.py
src/evaluation/: backtester.py  oracle_milp.py  stress_tests.py
tests/: test_battery_physics.py  test_environment_step.py
